# diffdrive

./: LICENSE  README.md  package.xml  requirements.txt  setup.cfg  setup.py
diffdrive/: base_tracker.py  fb_lin_track_node.py  feedback_linearize_tracker.py  husky_spawner.py  linear_tracker.py  lyap_track_node.py  lyapunov_tracker.py  pioneer_driver.py  robot_state_publisher.py  tracker_utils.py  traj_gen.py  traj_gen_node.py  trajectory_generator.py  trajectory_tracker.py
launch/: husky_launch.py  pioneer_tracker_demo_launch.py
models/husky/: model.config  model.sdf
protos/: MyRobot.proto  husky.proto
resource/: pioneer.urdf
worlds/: gazebo_husky.world  new_world.wbt
